[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ship/ShipFishList.gd" type="Script" id=1]
[ext_resource path="res://scenes/ship/ItemList.gd" type="Script" id=2]
[ext_resource path="res://scenes/maingame/camera/RotatingCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ship/FishCamNode.gd" type="Script" id=4]
[ext_resource path="res://env_world.tres" type="Environment" id=5]
[ext_resource path="res://assets/img/backgrounds/background-1.1.png" type="Texture" id=6]
[ext_resource path="res://scripts/generation/fishface/FishFaceGenerator.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ship/FishFaceContainer.gd" type="Script" id=8]
[ext_resource path="res://scenes/ship/key stuff/KeyMaker.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/FocusGrabber.gd" type="Script" id=10]

[node name="ShipFishList" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 468.0

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_right = 242.0
margin_bottom = 436.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
margin_left = 4.0
margin_right = 245.0
margin_bottom = 436.0
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 233.0
margin_bottom = 428.0

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 225.0
margin_bottom = 20.0
text = "Exit"
script = ExtResource( 10 )

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 225.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 246.0
margin_right = 489.0
margin_bottom = 436.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel2"]
modulate = Color( 0.917647, 0.74902, 0.74902, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 227.0
margin_bottom = 420.0

[node name="ViewportContainer" type="ViewportContainer" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
modulate = Color( 0.945098, 0.945098, 0.945098, 1 )
margin_right = 211.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/ViewportContainer"]
size = Vector2( 211, 380 )
handle_input_locally = false
render_target_update_mode = 3

[node name="FishCamNode" type="Spatial" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/ViewportContainer/Viewport"]
script = ExtResource( 4 )

[node name="RotatingCamOrigin" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/ViewportContainer/Viewport/FishCamNode" instance=ExtResource( 3 )]

[node name="Rotator" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/ViewportContainer/Viewport/FishCamNode/RotatingCamOrigin" index="0"]
speed = 1.0

[node name="Camera" type="Camera" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/ViewportContainer/Viewport/FishCamNode/RotatingCamOrigin/Rotator/RotatingCamPoint" index="0"]
environment = ExtResource( 5 )
current = true

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 384.0
margin_right = 211.0
margin_bottom = 404.0
size_flags_vertical = 0
text = "Inhabit"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 493.0
margin_right = 736.0
margin_bottom = 436.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 243.0
margin_bottom = 216.0
size_flags_vertical = 3

[node name="FishFaceContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 8 )

[node name="FishFace" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel/FishFaceContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 227.0
margin_bottom = 200.0
expand = true

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 243.0
margin_bottom = 436.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="KeyMaker" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2/MarginContainer" instance=ExtResource( 9 )]

[connection signal="fishCaptureOut" from="." to="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/ItemList" method="_on_ShipFishList_fishCaptureOut"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="emit_fish_capture_item" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/ItemList" to="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/ViewportContainer/Viewport/FishCamNode" method="_on_ItemList_emit_fish_capture_item"]
[connection signal="emit_fish_capture_item" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/ItemList" to="MarginContainer/HBoxContainer/VBoxContainer/Panel/FishFaceContainer" method="_on_ItemList_emit_fish_capture_item"]
[connection signal="emit_fish_capture_item" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/ItemList" to="MarginContainer/HBoxContainer/VBoxContainer/Panel2/MarginContainer/KeyMaker" method="_on_ItemList_emit_fish_capture_item"]
[connection signal="item_activated" from="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/ItemList" to="MarginContainer/HBoxContainer/Panel/MarginContainer/VBoxContainer/ItemList" method="_on_ItemList_item_activated"]
[connection signal="key_created" from="MarginContainer/HBoxContainer/VBoxContainer/Panel2/MarginContainer/KeyMaker" to="." method="_on_KeyMaker_key_created"]

[editable path="MarginContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/ViewportContainer/Viewport/FishCamNode/RotatingCamOrigin"]
